--- a/fly.toml
+++ b/fly.toml
@@ -1,9 +1,9 @@
-# fly.toml app configuration file generated for video-generator-2 on 2026-01-03T23:25:11Z
+# fly.toml app configuration file generated for video-generator-cwzupa on 2026-01-04T10:21:18Z
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'video-generator-2'
+app = 'video-generator-cwzupa'
 primary_region = 'gru'
 
 [build]
